db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-ce.yaml
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-ce.yaml
        kompose.version: 1.27.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: passbolt
            - name: MYSQL_PASSWORD
              value: "some password"
            - name: MYSQL_ROOT_PASSWORD
              value: "some password"
            - name: MYSQL_USER
              value: passbolt
          image: mariadb:10.11
          name: db
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: passbolt-db-pvc
      restartPolicy: Always
      volumes:
        - name: passbolt-db-pvc
          persistentVolumeClaim:
            claimName: passbolt-db-pvc
status: {}
